Change parseCsvList to return unmodifiable list